# C-_Server

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sonar-project.properties
.github/: FUNDING.yml
html/: _char_8h_source.html  _constants_8h_source.html  _converter_8h_source.html  _double_8h_source.html  _float_8h_source.html  _generic_type_8h_source.html  _integer_8h_source.html  _json_8h_source.html  _linked_list_8h_source.html  _long_8h_source.html  _memory_management_8h_source.html  _message_8h_source.html  _queue_8h_source.html  _reference_8h_source.html  _response_8h_source.html  _server_8h_source.html  _server_manager_8h_source.html  _stack_8h_source.html  _struct_8h_source.html  annotated.html  annotated_dup.js  class_char-members.html  class_char.html  class_char.js  class_converter-members.html  class_converter.html  class_double-members.html  class_double.html  class_double.js  class_float-members.html  class_float.html  class_float.js  class_generic_type-members.html  class_generic_type.html  class_generic_type.js  class_integer-members.html  class_integer.html  class_integer.js  class_json-members.html  class_json.html  (+57 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+6 more)
src/: Constants.h  MemoryManagement.h  ServerManager.cpp  ServerManager.h
(+52 files in other folders)
